; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_box.c_box_rmse.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_box.c_box_rmse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @box_rmse(%struct.TYPE_4__* byval(%struct.TYPE_4__) align 8 %0, %struct.TYPE_4__* byval(%struct.TYPE_4__) align 8 %1) #0 {
  %3 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 3
  %4 = load i64, i64* %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 3
  %6 = load i64, i64* %5, align 8
  %7 = sub nsw i64 %4, %6
  %8 = call i64 @pow(i64 %7, i32 2)
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 2
  %12 = load i64, i64* %11, align 8
  %13 = sub nsw i64 %10, %12
  %14 = call i64 @pow(i64 %13, i32 2)
  %15 = add nsw i64 %8, %14
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = sub nsw i64 %17, %19
  %21 = call i64 @pow(i64 %20, i32 2)
  %22 = add nsw i64 %15, %21
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = sub nsw i64 %24, %26
  %28 = call i64 @pow(i64 %27, i32 2)
  %29 = add nsw i64 %22, %28
  %30 = call float @sqrt(i64 %29)
  ret float %30
}

declare dso_local float @sqrt(i64) #1

declare dso_local i64 @pow(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
